--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -1,5 +1,8 @@
 .home {
   width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .home-box {
@@ -72,12 +75,16 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
+  p{
+    font-size: 1.3rem;
+  }
 }
 
 .home__link {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   text-align: center;
-  padding: 5px 20px;
+  padding: 5px 5px;
   width: 300px;
 
   &--1 {
