--- a/public/css/style.css
+++ b/public/css/style.css
@@ -504,14 +504,15 @@
   width: 30px;
   position: absolute;
   z-index: 1000;
-  top: 27rem;
+  top: 30rem;
   left: 50%;
+  transform: translateX(-50%);
   animation-duration: 1s;
   animation-name: pointer;
   animation-iteration-count: infinite; }
 
 .download {
-  margin-top: 31rem;
+  margin-top: 35rem;
   display: flex;
   justify-content: center; }
 
@@ -570,7 +571,7 @@
   font-family: 'GFS Didot', serif;
   text-transform: uppercase;
   font-size: 18px;
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   text-align: center;
   display: inline-block;
   width: 100%;
@@ -634,12 +635,11 @@
   flex-direction: column; }
 
 .home-box {
-  height: 98vh;
-  width: 80%;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 15px;
   background-color: transparent;
   backface-visibility: hidden;
   overflow: hidden;
@@ -648,12 +648,11 @@
   .home-box a {
     text-decoration: none; }
   .home-box--1 {
-    height: 80%;
+    height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 40px 0 0 40px;
     background: linear-gradient(to right, #dddddd, rgba(149, 186, 199, 0.1)), url("../img/cover-left-picture.jpg");
     background-size: cover;
     background-position: center;
@@ -667,8 +666,7 @@
       width: 80%;
       box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5); }
   .home-box--2 {
-    border-radius: 0 40px 40px 0;
-    height: 80%;
+    height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -694,9 +692,9 @@
     font-size: 1.3rem; }
 
 .home__link {
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   text-align: center;
-  padding: 5px 20px;
+  padding: 5px 5px;
   width: 300px; }
   .home__link--1 {
     color: #fefefe;
@@ -925,13 +923,15 @@ a {
   letter-spacing: 4px; }
 
 .header--secondary {
+  font-size: 2rem;
   color: #666;
   margin-top: 0.5rem;
   font-style: italic;
   font-family: 'GFS Didot', serif; }
 
 .cabinet-page {
-  font-weight: 400; }
+  font-weight: 400;
+  font-size: 1.2rem; }
   .cabinet-page a {
     color: #666666; }
     .cabinet-page a:hover {
@@ -962,42 +962,47 @@ a {
     width: 50%;
     z-index: 10;
     outline-offset: 2rem;
-    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 9px 9px 14px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     transition: all .2s; }
     .cabinet-img-modal .cabinet-img:hover {
       z-index: 11;
       transform: scale(1.3); }
-    .cabinet-img-modal .cabinet-img--1 {
-      top: 1rem;
-      left: 1rem; }
     .cabinet-img-modal .cabinet-img--2 {
-      top: 4rem;
-      right: 3rem; }
+      right: 0;
+      top: 1rem;
+      width: 30rem;
+      height: 19rem; }
     .cabinet-img-modal .cabinet-img--3 {
-      height: 12rem;
-      width: 20rem;
-      top: 14rem;
-      left: 4 rem; }
+      width: 30rem;
+      height: 19rem;
+      top: 22rem;
+      right: 0; }
+
+.cabinet-content-text {
+  margin-left: 4rem; }
 
 .acces-content {
   display: flex;
   flex-direction: row;
-  margin-top: 6rem; }
+  margin-top: 6rem;
+  position: relative; }
 
 .acces-text {
   color: #666666;
   padding-left: 1rem;
-  margin-left: 25%; }
+  margin-left: 30%; }
 
 .acces-info {
   margin-top: 3rem; }
 
 .acces-img {
   margin-top: -2rem;
-  width: 36%;
+  width: 40rem;
+  height: 23rem;
   position: absolute;
-  right: 7rem;
+  right: 6rem;
+  top: 3rem;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px; }
 
