--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -1,5 +1,6 @@
 .cabinet-page{
   font-weight: 400;
+  font-size: 1.2rem;
 
   a{
     color: #666666;
@@ -37,40 +38,43 @@
     width: 50%;
     z-index: 10;
     outline-offset: 2rem;
-    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+    box-shadow: 9px 9px 14px rgba(0, 0, 0, 0.5);
     border-radius: 5px;
     transition: all .2s;
     &:hover{
       z-index: 11;
       transform: scale(1.3);
     }
-    &--1{
-      top:1rem;
-      left:1rem;
-    }
     &--2{
-      top:4rem;
-      right:3rem;
-
+      right:0;
+      top:1rem;
+      width: 30rem;
+      height: 19rem;
     }
     &--3{
-      height: 12rem;
-      width: 20rem;
-      top:14rem;
-      left:4 rem;
+      width: 30rem;
+      height: 19rem;
+      top: 22rem;
+      right:0;
     }
   }
+}
+
+.cabinet-content-text{
+  margin-left: 4rem;
 }
 .acces-content{
   display: flex;
   flex-direction: row;
   margin-top: 6rem;
+  position: relative;
+
 }
 
 .acces-text{
   color: #666666;
   padding-left: 1rem;
-  margin-left: 25%;
+  margin-left: 30%;
 }
 
 .acces-info{
@@ -79,9 +83,11 @@
 
 .acces-img{
   margin-top: -2rem;
-  width: 36%;
+  width: 40rem;
+  height: 23rem;
   position: absolute;
-  right: 7rem;
+  right: 6rem;
+  top:3rem;
   box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
   border-radius: 5px;
 }
