--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -6,12 +6,11 @@
 }
 
 .home-box {
-  height: 98vh;
-  width: 80%;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 15px;
   background-color: transparent;
   backface-visibility: hidden;
   overflow: hidden;
@@ -23,12 +22,11 @@
   }
 
   &--1 {
-    height: 80%;
+    height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 40px 0 0 40px;
     background: linear-gradient(to right, rgba(221, 221, 221, 1), rgba(149, 186, 199, 0.1)), url("../img/cover-left-picture.jpg");
     background-size: cover;
     background-position: center;
@@ -47,8 +45,7 @@
   }
 
   &--2 {
-    border-radius: 0 40px 40px 0;
-    height: 80%;
+    height: 100%;
     width: 50%;
     display: flex;
     justify-content: center;
