--- a/public/css/style.css
+++ b/public/css/style.css
@@ -930,8 +930,7 @@ a {
   font-family: 'GFS Didot', serif; }
 
 .cabinet-page {
-  font-weight: 400;
-  font-size: 1.2rem; }
+  font-weight: 400; }
   .cabinet-page a {
     color: #666666; }
     .cabinet-page a:hover {
@@ -971,11 +970,11 @@ a {
     .cabinet-img-modal .cabinet-img--2 {
       right: 0;
       top: 1rem;
-      width: 30rem;
-      height: 19rem; }
+      width: 27rem;
+      height: 17rem; }
     .cabinet-img-modal .cabinet-img--3 {
-      width: 30rem;
-      height: 19rem;
+      width: 27rem;
+      height: 17rem;
       top: 22rem;
       right: 0; }
 
@@ -998,11 +997,11 @@ a {
 
 .acces-img {
   margin-top: -2rem;
-  width: 40rem;
-  height: 23rem;
+  width: 37rem;
+  height: 19rem;
   position: absolute;
-  right: 6rem;
-  top: 3rem;
+  right: 7rem;
+  top: 7rem;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px; }
 
