--- a/src/assets/sass/page/common-page.scss
+++ b/src/assets/sass/page/common-page.scss
@@ -1,8 +1,8 @@
-#page {
+/*#page {
   margin: 0 3rem 7rem 3rem;
   width: 95vw;
   text-align: left;
-}
+}*/
 
 .header--primary {
   color: #b5c5d3;
