--- a/src/assets/sass/abstracts/_animations.scss
+++ b/src/assets/sass/abstracts/_animations.scss
@@ -69,3 +69,18 @@
     transform: translateX(0);
   }
 }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  50% {
+    opacity: 0.5;
+    transform: translateY(-25px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
