--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,3 +1,5 @@
+@import 'node_modules/bootstrap/scss/bootstrap.scss';
+@import 'node_modules/bootstrap-vue/src/index.scss';
 @import "abstracts/variables";
 @import "abstracts/animations";
 @import "abstracts/icon";
@@ -26,3 +28,7 @@
 @import "page/osteo-pregnant";
 @import "page/reasons";
 @import "page/formation";
+
+@import "page/sm/home";
+@import "page/sm/header";
+@import "page/sm/navbar-sm";
