--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -29,7 +29,7 @@
   margin-bottom: 2rem;
 }
 .cabinet-img-modal{
-  width: 25%;
+  width: 75%;
   position: relative;
 
   .cabinet-img{
@@ -47,11 +47,11 @@
     &--2{
       right:0;
       top:1rem;
-      width: 27rem;
+      width: 100%;
       height: 17rem;
     }
     &--3{
-      width: 27rem;
+      width: 100%;
       height: 17rem;
       top: 22rem;
       right:0;
@@ -60,12 +60,13 @@
 }
 
 .cabinet-content-text{
-  margin-left: 4rem;
+  color: #666666;
+  padding-left: 1rem;
 }
+
 .acces-content{
   display: flex;
   flex-direction: row;
-  margin-top: 6rem;
   position: relative;
 
 }
@@ -73,7 +74,6 @@
 .acces-text{
   color: #666666;
   padding-left: 1rem;
-  margin-left: 30%;
 }
 
 .acces-info{
@@ -81,13 +81,7 @@
 }
 
 .acces-img{
-  margin-top: -2rem;
-  width: 37rem;
-  height: 19rem;
-  position: absolute;
-  right: 7rem;
-  top:7rem;
-  box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
+  width: 100%;
   border-radius: 5px;
 }
 
