--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -21,6 +21,10 @@
     text-decoration: none;
   }
 
+  a:hover {
+    color: #333333;
+  }
+
   &--1 {
     height: 100%;
     width: 50%;
@@ -73,9 +77,27 @@
   align-items: center;
   flex-direction: column;
 
-  p{
+  p {
     font-size: 1.3rem;
   }
+}
+
+.home-square {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  padding: 5rem;
+  text-align: center;
+  transition: all .3s;
+
+  &:hover {
+    transform: translateY(-10px);
+  }
+
+  &:active {
+    transform: translateY(5px);
+
+  }
+
 }
 
 .home__link {
@@ -136,9 +158,6 @@
 }
 
 @media only screen and (max-width: 992px) {
-  .home {
-
-  }
   .home-box {
     flex-direction: column;
     justify-content: center;
@@ -157,21 +176,29 @@
       }
 
       &:hover {
-        box-shadow: 0 5px 15px rgba(black, 0.8);
         width: 100%;
       }
     }
 
-    &--2 {
-      color: #666;
+    &--1 {
       width: 100%;
-      background: none;
-
-      &:hover {
-        width: 100%;
-        box-shadow: 0 -10px 10px rgba(black, 0.25);
-
-      }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(to right, rgba(221, 221, 221, 1), rgba(149, 186, 199, 0.1)), url("../img/cover-left-picture.jpg");
+      background-size: cover;
+      background-position: center;
+      color: #666;
+    }
+    &--2 {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(to right, rgba(221, 221, 221, 0.1), rgba(149, 186, 199, 1)), url("../img/cover-right-picture.jpg");
+      background-size: cover;
+      background-position: center;
+      color: #F9F9F9;
     }
   }
 
@@ -194,4 +221,22 @@
       }
     }
   }
+  .home-square {
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 5rem;
+    text-align: center;
+    transition: all .3s;
+
+    &:hover {
+
+    }
+
+    &:active {
+
+
+    }
+
+  }
+
 }
