--- a/src/assets/sass/page/osteopathie.scss
+++ b/src/assets/sass/page/osteopathie.scss
@@ -18,13 +18,14 @@
 }
 
 .osteopathie-img{
-  width: 18%;
+  width: 100%;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
 }
 
 .osteopathie-text{
-  width: 70%;
+  color: #666666;
+  padding-left: 1rem;
 }
 .accordion{
   margin: 2rem 0;
