--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9489,7 +9489,7 @@ input[type="color"].form-control:disabled {
   top: 0 !important;
   width: 100% !important;
   position: fixed !important;
-  z-index: 500 !important;
+  z-index: 500;
   background-color: #b5c5d3 !important;
   box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08) !important;
   color: #fff !important; }
@@ -9821,7 +9821,7 @@ input[type="color"].form-control:disabled {
     opacity: 1; }
 
 .resume {
-  width: 40%;
+  width: 100%;
   font-size: 14px;
   font-family: 'Noto Sans', sans-serif;
   color: #666;
@@ -10014,54 +10014,34 @@ input[type="color"].form-control:disabled {
       width: 100%;
       transition: width .5s; }
 
-@media only screen and (max-width: 992px) {
-  .home-box {
-    flex-direction: column;
-    justify-content: center;
-    width: 100vw;
-    border-radius: 0;
-    height: 100vh; }
-    .home-box--1 {
-      color: #666;
-      width: 100%;
-      box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
-      background: none; }
-      .home-box--1 a {
-        color: #666; }
-      .home-box--1:hover {
-        width: 100%; }
-    .home-box--1 {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(to right, #dddddd, rgba(149, 186, 199, 0.1)), url("../img/cover-left-picture.jpg");
-      background-size: cover;
-      background-position: center;
-      color: #666; }
-    .home-box--2 {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: linear-gradient(to right, rgba(221, 221, 221, 0.1), #95bac7), url("../img/cover-right-picture.jpg");
-      background-size: cover;
-      background-position: center;
-      color: #F9F9F9; }
-  .home__link--1 {
-    color: #666; }
-    .home__link--1:hover {
-      color: #b5c5d3; }
-    .home__link--1::after {
-      background: #666; }
-  .home__link--2:hover {
-    color: #b5c5d3; }
-  .home-square {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-    border-radius: 10px;
-    padding: 5rem;
-    text-align: center;
-    transition: all .3s; } }
+.header-home {
+  background-color: #b5c5d3; }
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  border-bottom: .25rem solid transparent; }
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  border-bottom-color: rgba(255, 255, 255, 0.25); }
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem; }
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff; }
+
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+  color: #333;
+  text-shadow: none;
+  /* Prevent inheritance from `body` */ }
 
 html {
   scroll-behavior: smooth; }
@@ -10086,6 +10066,10 @@ a {
   text-decoration: none !important;
   color: #fff; }
 
+ul,
+li {
+  font-weight: normal; }
+
 #book-container {
   width: 100vw; }
 
@@ -10093,6 +10077,7 @@ a {
   padding-top: 10rem; }
 
 .book-containter {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin-top: 5rem;
@@ -10221,12 +10206,19 @@ a {
   text-transform: uppercase;
   letter-spacing: 4px; }
 
+.custom-shadow {
+  box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08) !important; }
+
 .header--secondary {
   font-size: 2rem;
   color: #666;
   margin-top: 0.5rem;
   font-style: italic;
   font-family: 'GFS Didot', serif; }
+
+@media (max-width: 599px) {
+  .header--primary {
+    font-size: 2rem; } }
 
 .cabinet-page {
   font-weight: 400; }
@@ -10253,7 +10245,6 @@ a {
   margin-bottom: 2rem; }
 
 .cabinet-img-modal {
-  width: 75%;
   position: relative; }
   .cabinet-img-modal .cabinet-img {
     position: absolute;
