--- a/src/assets/sass/page/reasons.scss
+++ b/src/assets/sass/page/reasons.scss
@@ -25,14 +25,13 @@
 
 .reason-box{
   width: 40%;
-  height: 20rem;
   margin: 1rem;
   display: flex;
   flex-direction: row;
 }
 
 .reason-img {
-  width: 30%;
+
   border-radius: 5px;
   opacity: 0.8;
   box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.5);
@@ -40,4 +39,8 @@
 
 .reason-text{
   margin-left: 1rem;
+}
+
+.reason-img-box{
+  width: 5rem;
 }
