--- a/src/assets/sass/page/reasons.scss
+++ b/src/assets/sass/page/reasons.scss
@@ -24,7 +24,7 @@
 }
 
 .reason-box{
-  width: 40%;
+  width: 50%;
   margin: 1rem;
   display: flex;
   flex-direction: row;
@@ -43,4 +43,5 @@
 
 .reason-img-box{
   width: 5rem;
+  height: 8rem;
 }
