--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10234,6 +10234,9 @@ li {
   margin-left: 3rem;
   margin-bottom: 2rem; }
 
+.wrapper {
+  max-width: 90% !important; }
+
 .cabinet-img-modal {
   position: relative; }
   .cabinet-img-modal .cabinet-img {
@@ -10275,7 +10278,7 @@ li {
   margin-top: 3rem; }
 
 .acces-img {
-  height: 25%;
+  height: 50%;
   width: 100%;
   border-radius: 5px; }
 
