--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -28,6 +28,10 @@
   margin-left: 3rem;
   margin-bottom: 2rem;
 }
+
+.wrapper{
+  max-width: 90%!important;
+}
 .cabinet-img-modal{
   position: relative;
 
@@ -80,7 +84,7 @@
 }
 
 .acces-img{
-  height: 25%;
+  height: 50%;
   width: 100%;
   border-radius: 5px;
 }
