--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -84,9 +84,10 @@
 }
 
 .acces-img{
-  height: 50%;
-  width: 100%;
+  height: 20rem;
+  width: 90%;
   border-radius: 5px;
+  margin-left: 1rem;
 }
 
 .doctolib-btn {
