--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, rgba(221, 221, 221, 1), rgba(149, 186, 199, 0.1)), url("../img/cover-left-picture.jpg");
+    background: linear-gradient(to right, rgba(221, 221, 221, 1), rgba(149, 186, 199, 0.1)), url("../img/cover-left-picture.svg");
     background-size: cover;
     background-position: center;
     color: #666;
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to right, rgba(221, 221, 221, 0.1), rgba(149, 186, 199, 1)), url("../img/cover-right-picture.jpg");
+    background: linear-gradient(to right, rgba(221, 221, 221, 0.1), rgba(149, 186, 199, 1)), url("../img/cover-right-picture.svg");
     background-size: cover;
     background-position: center;
     color: #F9F9F9;
@@ -188,4 +188,8 @@
 .btn-secondary:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
+}
+
+.test{
+  box-shadow: 10px 5px 10px rgba(black, 0.5);
 }
