--- a/src/assets/sass/page/common-page.scss
+++ b/src/assets/sass/page/common-page.scss
@@ -5,7 +5,7 @@
 }*/
 
 .header--primary {
-  color: #b5c5d3;
+  color: #d4e3f1;
   font-size: 3rem;
   text-transform: uppercase;
   letter-spacing: 4px;
