--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -1,3 +1,4 @@
+
 .home {
   width: 100%;
   display: flex;
@@ -164,14 +165,14 @@
   padding: .25rem 0;
   font-size: 1.5rem;
   font-weight: 700;
-  color: rgba(255, 255, 255, 0.5);
+  color: rgb(255, 255, 255);
   background-color: transparent;
   border-bottom: .25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-  border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgb(255, 255, 255);
 
 }
 
