--- a/src/assets/sass/page/reasons.scss
+++ b/src/assets/sass/page/reasons.scss
@@ -6,6 +6,17 @@
   }
 }
 
+.tab-title{
+  color:#666666!important;
+}
+
+#sidebar-1{
+    width: 620px;
+  }
+
+#sidebar-2{
+  width: 620px;
+}
 
 .reason-modal{
   display: flex;
@@ -44,4 +55,21 @@
 .reason-img-box{
   width: 5rem;
   height: 8rem;
+}
+.card-title{
+  font-size: 1.2rem;
+}
+.card-home{
+  background: #d4e3f1;
+  height: 16rem;
+  box-shadow:0 6px 14px rgba(0,0,0,0.12), 0 0 0 rgba(0,0,0,0.24) ;
+  padding: 1rem 1rem;
+  margin: 0.5rem 0;
+  border-radius: 8px;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+
+  &:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.18), 0 10px 10px rgba(0,0,0,0.14);
+
+  }
 }
