--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -9830,7 +9831,7 @@ input[type="color"].form-control:disabled {
 .resume {
   width: 100%;
   font-size: 14px;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #666;
   margin-right: 2rem;
   font-weight: 400; }
@@ -10080,6 +10081,10 @@ ul,
 li {
   font-weight: normal; }
 
+.custom-container {
+  padding-left: 0;
+  padding-right: 0; }
+
 #book-container {
   width: 100vw; }
 
@@ -10113,6 +10118,29 @@ li {
     width: 20%;
     border: 1px solid #666;
     height: 3rem; }
+
+#videoDiv2 {
+  width: 100%;
+  margin: auto;
+  display: block;
+  position: relative; }
+
+/* This has been changed */
+#video2 {
+  width: 100%;
+  height: ²; }
+
+/* This has been changed */
+#videoMessage2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%; }
 
 #author {
   padding-top: 10rem; }
@@ -10201,6 +10229,7 @@ li {
   text-align: left;
 }*/
 .header--primary {
+  font-weight: 400;
   color: #d4e3f1;
   font-size: 3rem;
   text-transform: uppercase;
@@ -10213,6 +10242,14 @@ li {
   font-size: 2rem;
   color: #666;
   margin-top: 0.5rem;
+  font-style: italic;
+  font-family: 'GFS Didot', serif; }
+
+.header--tertiaire {
+  text-align: center;
+  font-size: 1.5rem;
+  color: #666;
+  margin-top: 1rem;
   font-style: italic;
   font-family: 'GFS Didot', serif; }
 
@@ -10323,7 +10360,6 @@ li {
     margin-bottom: 0; }
 
 #head {
-  margin-top: 20rem;
   background: linear-gradient(to right, #dddddd, rgba(149, 186, 199, 0.1)), url("../img/carousel-1.jpg");
   background-size: cover;
   min-height: 520px;
