--- a/src/assets/sass/layout/resume.scss
+++ b/src/assets/sass/layout/resume.scss
@@ -2,7 +2,7 @@
 .resume {
   width: 100%;
   font-size: 14px;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Roboto', sans-serif;
   color: #666;
   margin-right: 2rem;
   font-weight: 400;
