--- a/src/assets/sass/page/book-page.scss
+++ b/src/assets/sass/page/book-page.scss
@@ -40,4 +40,13 @@
 
   }
 }
+#videoDiv2 {width:100%;  margin:auto; display:block; position: relative;} /* This has been changed */
+#video2{width:100%; height:² } /* This has been changed */
+#videoMessage2 { position: absolute; top: 0; left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;}
 
