--- a/src/assets/sass/layout/navbar.scss
+++ b/src/assets/sass/layout/navbar.scss
@@ -8,6 +8,7 @@
   background-color: #d4e3f1 !important;
   box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08)!important;
   color: #fff !important;
+  font-size: 0.85rem!important;
 }
 
 .nav-link{
