--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -28,7 +28,4 @@
 @import "page/osteo-pregnant";
 @import "page/reasons";
 @import "page/formation";
-
-@import "page/sm/home";
-@import "page/sm/header";
-@import "page/sm/navbar-sm";
+@import "page/network";
