--- a/src/assets/sass/page/book-page.scss
+++ b/src/assets/sass/page/book-page.scss
@@ -41,7 +41,7 @@
   }
 }
 #videoDiv2 {width:100%;  margin:auto; display:block; position: relative;} /* This has been changed */
-#video2{width:100%; height:² } /* This has been changed */
+#video2{width:100%; height:100% } /* This has been changed */
 #videoMessage2 { position: absolute; top: 0; left: 0;
   display: flex;
   flex-direction: column;
