--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*!
  * Bootstrap v4.5.3 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -9497,7 +9496,8 @@ input[type="color"].form-control:disabled {
   z-index: 500;
   background-color: #d4e3f1 !important;
   box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08) !important;
-  color: #fff !important; }
+  color: #fff !important;
+  font-size: 0.85rem !important; }
 
 .nav-link {
   color: #fff !important; }
@@ -10128,7 +10128,7 @@ li {
 /* This has been changed */
 #video2 {
   width: 100%;
-  height: ²; }
+  height: 100%; }
 
 /* This has been changed */
 #videoMessage2 {
@@ -10258,7 +10258,7 @@ li {
     font-size: 2rem; } }
 
 .cabinet-page {
-  font-weight: 400; }
+  font-weight: 300; }
   .cabinet-page a {
     color: #666666; }
     .cabinet-page a:hover {
@@ -10764,65 +10764,16 @@ li {
     border-radius: 35px;
     width: 14rem; }
 
-.sm-header-modal {
-  z-index: 2;
-  overflow: auto;
-  background-color: #B5C5D3;
-  position: fixed;
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: row;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-  border-radius: 0 0 35px 35px;
-  animation-name: moveInBottom;
-  animation-duration: 0.2s;
-  animation-timing-function: linear;
-  -webkit-overflow-scrolling: touch; }
+.carousel-3d-slide {
+  background-color: transparent !important;
+  border-style: none !important;
+  border-radius: 10px; }
 
-.sm-header-box {
-  width: 50%;
-  text-align: center;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem 0;
-  transition: all .2s; }
-  .sm-header-box:hover {
-    transform: scale(1.1); }
-  .sm-header-box a {
-    color: #fefefe; }
-    .sm-header-box a a:hover {
-      color: #fefefe; }
-  .sm-header-box--1 {
-    border-right: 2px solid #fefefe; }
+.card-network {
+  box-shadow: none; }
+  .card-network:hover {
+    box-shadow: none; }
 
-.sm-navbar-modal {
-  top: 0;
-  position: -webkit-sticky;
-  position: sticky;
-  z-index: 1; }
-
-.scroll {
-  padding: 1rem 0;
-  white-space: nowrap;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: -ms-autohiding-scrollbar; }
-  .scroll a {
-    color: #fefefe;
-    background-color: #B5C5D3; }
-
-/* [5] */
-.scroll::-webkit-scrollbar {
-  display: none; }
-
-.nav-item {
-  padding: 1rem;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0; }
-  .nav-item:not(:last-child) {
-    border-right: 1px solid rgba(254, 254, 254, 0.2); }
+.card-text-network {
+  font-size: 0.8rem;
+  font-weight: normal; }
