--- a/src/assets/sass/page/book-page.scss
+++ b/src/assets/sass/page/book-page.scss
@@ -40,7 +40,7 @@
 
   }
 }
-#videoDiv2 {width:100%;  margin:auto; display:block; position: relative;} /* This has been changed */
+#videoDiv2 {width:100vw;  margin:auto; display:block; position: relative;} /* This has been changed */
 #video2 {
   width: 100%;
   height: 100%;
