--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10127,7 +10127,7 @@ li {
 
 /* This has been changed */
 #video2 {
-  width: 100%;
+  width: 100vw;
   height: 100%; }
 
 #videoMessage2 {
@@ -10139,7 +10139,25 @@ li {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  text-align: center; }
+
+.cd-next {
+  display: block;
+  height: 50px;
+  width: 50px;
+  overflow: hidden;
+  -webkit-transition: opacity .2s 0s,visibility .2s 0s;
+  -moz-transition: opacity .2s 0s,visibility .2s 0s;
+  transition: opacity .2s 0s,visibility .2s 0s;
+  z-index: 5000; }
+
+.down-arrow {
+  width: 40px; }
+
+@media (max-width: 576px) {
+  #videoDiv2 {
+    margin-top: 94px; } }
 
 #author {
   padding-top: 10rem; }
@@ -10239,7 +10257,7 @@ li {
 
 .header--secondary {
   font-size: 2rem;
-  color: #666;
+  color: #ffffff;
   margin-top: 0.5rem;
   font-style: italic;
   font-family: 'GFS Didot', serif; }
