--- a/src/assets/sass/layout/navbar.scss
+++ b/src/assets/sass/layout/navbar.scss
@@ -8,13 +8,18 @@
   background-color: #d4e3f1 !important;
   box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08)!important;
   color: #fff !important;
-  font-size: 0.85rem!important;
+  font-size: 1rem!important;
 }
 
 .nav-link{
   color:#fff!important;
+  border-right:1px solid #fff;
+
 }
 
+.navbar-nav{
+  margin-left: 2rem;
+}
 
 
  /* ul {
