--- a/src/assets/sass/page/common-page.scss
+++ b/src/assets/sass/page/common-page.scss
@@ -17,7 +17,7 @@
 }
 .header--secondary {
   font-size: 2rem;
-  color: #ffffff;
+  color: #575E69;
   margin-top: 0.5rem;
   font-style: italic;
   font-family: 'GFS Didot', serif;
