--- a/src/assets/sass/page/network.scss
+++ b/src/assets/sass/page/network.scss
@@ -1,3 +1,6 @@
+#network{
+  padding-top: 10rem;
+}
 .carousel-3d-slide{
   background-color: transparent!important;
   border-style: none!important;
